Update link colors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <div class="text">
 <h1>Mike Thierman</h1>
-<h2><a href="dev">Developer</a> & <a href="audio">Audio Engineer</a></h2>
+<h2><a class="split" href="dev">Developer</a> & <a class="split" href="audio">Audio Engineer</a></h2>
 <div class="social">
 <a href="#"><i class="fab fa-youtube"></i></a>
 <a href="#"><i class="fab fa-facebook"></i></a>
